--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "px2rem-loader": "^0.1.9",
-    "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^2.1.0",
@@ -59,6 +57,7 @@
     "core-js": "^3.2.1",
     "crypto-js": "^4.0.0",
     "crypto.js": "^1.3.1",
+    "echarts": "^5.1.0",
     "es6-promise": "^4.2.8",
     "fastclick": "^1.0.6",
     "hammerjs": "^2.0.8",
